fix problem in mobile - change body overflow-x : hidden

--- a/mockup/css/style.css
+++ b/mockup/css/style.css
@@ -25,6 +25,7 @@ body {
 	font-size: 17px;
     color: #333;
     height: auto;
+    overflow-x: hidden;
 }
 input, button, select, textarea {
 	font-family: 'Raleway', sans-serif;
